--- a/bindings_examples/cpp/Makefile
+++ b/bindings_examples/cpp/Makefile
@@ -3,7 +3,7 @@
 # CORE VARIABLES
 
 MODULE := info
-VERSION := 
+VERSION :=
 CONFIG := release
 CONTAINS_CXX := defined
 ifndef COMPILER
@@ -32,13 +32,13 @@ CONSOLE = -mconsole
 
 # INCLUDES
 
-DGGAL_ABSPATH := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))../../../
+DGGAL_ABSPATH := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))../../
 
-ifndef ECERE_SDK_SRC
-ECERE_SDK_SRC := $(DGGAL_ABSPATH)../ecere-sdk
+ifndef EC_SDK_SRC
+EC_SDK_SRC := $(DGGAL_ABSPATH)../eC
 endif
 
-_CF_DIR = $(ECERE_SDK_SRC)/
+_CF_DIR = $(EC_SDK_SRC)/
 include $(_CF_DIR)crossplatform.mk
 include $(_CF_DIR)default.cf
 ifndef WINDOWS_HOST
@@ -51,7 +51,7 @@ endif
 
 OBJ = obj/$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/
 
-RES = 
+RES =
 
 TARGET_NAME := info
 
@@ -59,22 +59,18 @@ TARGET = obj/$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/$(TARGET_NAM
 
 _OBJECTS = \
 	$(OBJ)dggal.cpp$(O) \
-	$(OBJ)eC.cpp$(O) \
-	$(OBJ)ecere.cpp$(O) \
+	$(OBJ)ecrt.cpp$(O) \
 	$(OBJ)dggal$(O) \
-	$(OBJ)eC$(O) \
-	$(OBJ)ecere$(O) \
+	$(OBJ)ecrt$(O) \
 	$(OBJ)info$(O)
 
 OBJECTS = $(_OBJECTS)
 
 SOURCES = \
 	../../bindings/cpp/dggal.cpp \
-	../../bindings/cpp/eC.cpp \
-	../../bindings/cpp/ecere.cpp \
+	../../bindings/cpp/ecrt.cpp \
 	../../bindings/c/dggal.c \
-	../../bindings/c/eC.c \
-	../../bindings/c/ecere.c \
+	../../bindings/c/ecrt.c \
 	info.cpp
 
 RESOURCES =
@@ -89,7 +85,7 @@ LIBS += $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
 ifndef STATIC_LIBRARY_TARGET
 LIBS += \
-	$(call _L,ecere)
+	$(call _L,ecrt)
 endif
 
 PRJ_CFLAGS += \
@@ -104,10 +100,12 @@ CUSTOM1_PRJ_CFLAGS = \
 ECFLAGS += -module $(MODULE)
 CECFLAGS += -cpp $(_CPP)
 
-ifndef STATIC_LIBRARY_TARGET
 OFLAGS += \
-	 -L$(call quote_path,../../obj/release.$(PLATFORM)$(COMPILER_CONFIG))
-endif
+	-L$(call quote_path,../../obj/release.$(PLATFORM)$(COMPILER_CONFIG)) \
+	-L$(call quote_path,$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_CONFIG)/lib) \
+	-L$(call quote_path,$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_CONFIG)/bin)
+
+CXXFLAGS += -std=c++17
 
 # TARGETS
 
@@ -122,24 +120,14 @@ $(TARGET): $(SOURCES) $(RESOURCES_EAR) $(SYMBOLS) $(OBJECTS) | objdir
 	@$(call rm,$(OBJ)objects.lst)
 	@$(call touch,$(OBJ)objects.lst)
 	$(call addtolistfile,$(_OBJECTS),$(OBJ)objects.lst)
-ifndef STATIC_LIBRARY_TARGET
 	$(LD) $(OFLAGS) @$(OBJ)objects.lst $(LIBS) -o $(TARGET) $(INSTALLNAME) $(SONAME)
 ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
 endif
-else
-ifdef WINDOWS_HOST
-	$(AR) rcs $(TARGET) @$(OBJ)objects.lst $(LIBS)
-else
-	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
-endif
-endif
-ifdef SHARED_LIBRARY_TARGET
 ifdef LINUX_TARGET
 ifdef LINUX_HOST
 	$(if $(basename $(VER)),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)),)
 	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO),)
-endif
 endif
 endif
 
@@ -152,20 +140,14 @@ endif
 $(OBJ)dggal.cpp$(O): ../../bindings/cpp/dggal.cpp
 	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/cpp/dggal.cpp) -o $(call quote_path,$@)
 
-$(OBJ)eC.cpp$(O): ../../bindings/cpp/eC.cpp
-	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/cpp/eC.cpp) -o $(call quote_path,$@)
-
-$(OBJ)ecere.cpp$(O): ../../bindings/cpp/ecere.cpp
-	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/cpp/ecere.cpp) -o $(call quote_path,$@)
+$(OBJ)ecrt.cpp$(O): ../../bindings/cpp/ecrt.cpp
+	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/cpp/ecrt.cpp) -o $(call quote_path,$@)
 
 $(OBJ)dggal$(O): ../../bindings/c/dggal.c
 	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/dggal.c) -o $(call quote_path,$@)
 
-$(OBJ)eC$(O): ../../bindings/c/eC.c
-	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/eC.c) -o $(call quote_path,$@)
-
-$(OBJ)ecere$(O): ../../bindings/c/ecere.c
-	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/ecere.c) -o $(call quote_path,$@)
+$(OBJ)ecrt$(O): ../../bindings/c/ecrt.c
+	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/ecrt.c) -o $(call quote_path,$@)
 
 $(OBJ)info$(O): info.cpp
 	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,info.cpp) -o $(call quote_path,$@)
