--- a/Makefile.dgg.static
+++ b/Makefile.dgg.static
@@ -33,11 +33,11 @@ CONSOLE = -mconsole
 
 DGGAL_ABSPATH := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))
 
-ifndef ECERE_SDK_SRC
-ECERE_SDK_SRC := $(DGGAL_ABSPATH)../ecere-sdk
+ifndef EC_SDK_SRC
+EC_SDK_SRC := $(DGGAL_ABSPATH)../eC
 endif
 
-_CF_DIR = $(ECERE_SDK_SRC)/
+_CF_DIR = $(EC_SDK_SRC)/
 include $(_CF_DIR)crossplatform.mk
 include $(_CF_DIR)default.cf
 ifndef WINDOWS_HOST
@@ -111,7 +111,7 @@ ifndef STATIC_LIBRARY_TARGET
 LIBS += \
 	-Wl,-Bstatic \
 	$(call _L,dggalStatic) \
-	$(call _L,ecereVanilla)
+	$(call _L,ecrtStatic)
 endif
 
 PRJ_CFLAGS += \
@@ -121,43 +121,28 @@ PRJ_CFLAGS += \
 ECFLAGS += -module $(MODULE)
 # PLATFORM-SPECIFIC OPTIONS
 
+OFLAGS += \
+	$(if $(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)/lib,-L$(call quote_path,$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)/lib),)
+
 ifdef WINDOWS_TARGET
 OFLAGS += \
-	$(if $(ECERE_SDK_SRC)/deps/zlib-1.2.8/obj/release.$(PLATFORM)$(COMPILER_SUFFIX),-L$(call quote_path,$(ECERE_SDK_SRC)/deps/zlib-1.2.8/obj/release.$(PLATFORM)$(COMPILER_SUFFIX)),) \
-	$(if $(ECERE_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)/lib,-L$(call quote_path,$(ECERE_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)/lib),) \
+	$(if $(EC_SDK_SRC)/deps/zlib-1.2.8/obj/release.$(PLATFORM)$(COMPILER_SUFFIX),-L$(call quote_path,$(EC_SDK_SRC)/deps/zlib-1.2.8/obj/release.$(PLATFORM)$(COMPILER_SUFFIX)),) \
 	-static-libgcc
 LIBS += \
 	-Wl,-Bdynamic \
-	$(call _L,gdi32) \
-	$(call _L,ws2_32) \
 	$(call _L,winmm) \
 	$(call _L,mpr) \
-	$(call _L,imm32) \
 	-Wl,-Bstatic \
 	$(call _L,z)
 endif
 
 ifdef LINUX_TARGET
 
-ifdef STATIC_SYSLIBS
-LIBS += -Wl,-Bstatic \
-	$(call _L,curses) \
-	$(call _L,tinfo) \
-	$(call _L,gpm) \
-	$(call _L,sqlite3)
-else
-LIBS += -Wl,-Bdynamic \
-	$(call _L,curses)
-endif
-
 LIBS += -Wl,-Bstatic \
 	$(call _L,z) \
 
 LIBS += -Wl,-Bdynamic \
 	$(call _L,m) \
-	$(call _L,X11) \
-	$(call _L,Xrender) \
-	$(call _L,Xext) \
 	$(call _L,dl) \
 	$(call _L,pthread)
 
@@ -176,8 +161,8 @@ all: objdir $(TARGET)
 
 objdir:
 	$(if $(wildcard $(OBJ)),,$(call mkdir,$(OBJ)))
-	$(if $(ECERE_SDK_SRC),$(if $(wildcard $(call escspace,$(ECERE_SDK_SRC)/crossplatform.mk)),,@$(call echo,Ecere SDK Source Warning: The value of ECERE_SDK_SRC is pointing to an incorrect ($(ECERE_SDK_SRC)) location.)),)
-	$(if $(ECERE_SDK_SRC),,$(if $(ECP_DEBUG)$(ECC_DEBUG)$(ECS_DEBUG),@$(call echo,ECC Debug Warning: Please define ECERE_SDK_SRC before using ECP_DEBUG, ECC_DEBUG or ECS_DEBUG),))
+	$(if $(EC_SDK_SRC),$(if $(wildcard $(call escspace,$(EC_SDK_SRC)/crossplatform.mk)),,@$(call echo,Ecere SDK Source Warning: The value of EC_SDK_SRC is pointing to an incorrect ($(EC_SDK_SRC)) location.)),)
+	$(if $(EC_SDK_SRC),,$(if $(ECP_DEBUG)$(ECC_DEBUG)$(ECS_DEBUG),@$(call echo,ECC Debug Warning: Please define EC_SDK_SRC before using ECP_DEBUG, ECC_DEBUG or ECS_DEBUG),))
 
 $(OBJ)$(MODULE).main.ec: $(SYMBOLS) $(COBJECTS)
 	@$(call rm,$(OBJ)symbols.lst)
@@ -197,33 +182,11 @@ $(TARGET): $(SOURCES) $(RESOURCES_EAR) $(SYMBOLS) $(OBJECTS) | objdir
 	@$(call touch,$(OBJ)objects.lst)
 	$(call addtolistfile,$(OBJ)$(MODULE).main$(O),$(OBJ)objects.lst)
 	$(call addtolistfile,$(ECOBJECTS),$(OBJ)objects.lst)
-ifndef STATIC_LIBRARY_TARGET
 	$(LD) $(OFLAGS) @$(OBJ)objects.lst $(LIBS) -o $(TARGET) $(INSTALLNAME) $(SONAME)
 ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
 endif
-ifndef WINDOWS_TARGET
-ifdef EXECUTABLE_TARGET
 	$(UPX) $(UPXFLAGS) $(TARGET)
-endif
-else
-	$(UPX) $(UPXFLAGS) $(TARGET)
-endif
-else
-ifdef WINDOWS_HOST
-	$(AR) rcs $(TARGET) @$(OBJ)objects.lst $(LIBS)
-else
-	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
-endif
-endif
-ifdef SHARED_LIBRARY_TARGET
-ifdef LINUX_TARGET
-ifdef LINUX_HOST
-	$(if $(basename $(VER)),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)),)
-	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO),)
-endif
-endif
-endif
 
 # SYMBOL RULES
 
@@ -356,14 +319,6 @@ cleantarget:
 	$(call rm,$(OBJ)symbols.lst)
 	$(call rm,$(OBJ)objects.lst)
 	$(call rm,$(TARGET))
-ifdef SHARED_LIBRARY_TARGET
-ifdef LINUX_TARGET
-ifdef LINUX_HOST
-	$(call rm,$(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)))
-	$(call rm,$(OBJ)$(LP)$(MODULE)$(SO))
-endif
-endif
-endif
 
 clean: cleantarget
 	$(call rm,$(_OBJECTS))
