--- a/bindings/c/Makefile
+++ b/bindings/c/Makefile
@@ -1,38 +1,32 @@
-.PHONY: all clean realclean distclean eC_c ecere_c dggal_c
+.PHONY: all clean realclean distclean ecrt_c dggal_c
 
 DGGAL_ABSPATH := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))../../
 
-ifndef ECERE_SDK_SRC
-ECERE_SDK_SRC := $(DGGAL_ABSPATH)../ecere-sdk
+ifndef EC_SDK_SRC
+EC_SDK_SRC := $(DGGAL_ABSPATH)../eC
 endif
 
-_CF_DIR = $(ECERE_SDK_SRC)/
+_CF_DIR = $(EC_SDK_SRC)/
 include $(_CF_DIR)crossplatform.mk
 
 # TARGETS
 
-all: eC_c ecere_c dggal_c
+all: ecrt_c dggal_c
 
-eC_c:
-	+$(_MAKE) -f eC_c.Makefile
-
-ecere_c:
-	+$(_MAKE) -f ecere_c.Makefile
+ecrt_c:
+	+$(_MAKE) -f Makefile.ecrt_c
 
 dggal_c:
-	+$(_MAKE) -f dggal_c.Makefile
+	+$(_MAKE) -f Makefile.dggal_c
 
 clean:
-	+$(_MAKE) -f eC_c.Makefile clean
-	+$(_MAKE) -f ecere_c.Makefile clean
-	+$(_MAKE) -f dggal_c.Makefile clean
+	+$(_MAKE) -f Makefile.ecrt_c clean
+	+$(_MAKE) -f Makefile.dggal_c clean
 	
 realclean:
-	+$(_MAKE) -f eC_c.Makefile realclean
-	+$(_MAKE) -f ecere_c.Makefile realclean
-	+$(_MAKE) -f dggal_c.Makefile realclean
+	+$(_MAKE) -f Makefile.ecrt_c realclean
+	+$(_MAKE) -f Makefile.dggal_c realclean
 
 distclean:
-	+$(_MAKE) -f eC_c.Makefile distclean
-	+$(_MAKE) -f ecere_c.Makefile distclean
-	+$(_MAKE) -f dggal_c.Makefile distclean
+	+$(_MAKE) -f Makefile.ecrt_c distclean
+	+$(_MAKE) -f Makefile.dggal_c distclean
