--- a/bindings/cpp/Makefile.dggal_cpp
+++ b/bindings/cpp/Makefile.dggal_cpp
@@ -4,11 +4,11 @@ endif
 
 # CORE VARIABLES
 
-BINDMODLOC := obj/linux/lib
-BINDING_MODULE := ecere
-BINDING_NAME := ecere
+BINDMODLOC := obj
+BINDING_MODULE := dggal
+BINDING_NAME := dggal
 MODULE := $(BINDING_NAME)_cpp
-VERSION := 0.44
+VERSION := 0.0.1
 CONFIG := release
 # CONTAINS_CXX := defined
 ifndef COMPILER
@@ -36,8 +36,16 @@ CONSOLE = -mwindows
 
 # INCLUDES
 
-include ../../$(_CF_DIR)crossplatform.mk
-include ../../$(_CF_DIR)default.cf
+DGGAL_ABSPATH := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))../../
+
+ifndef EC_SDK_SRC
+EC_SDK_SRC := $(DGGAL_ABSPATH)../eC
+endif
+
+_CF_DIR = $(EC_SDK_SRC)/
+
+include $(_CF_DIR)crossplatform.mk
+include $(_CF_DIR)default.cf
 
 # POST-INCLUDES VARIABLES
 
@@ -46,7 +54,7 @@ OBJ = obj/$(BINDING_NAME).$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)
 RES =
 
 ifdef LINUX_TARGET
-TARGET = $(OBJ)$(LP)$(MODULE)$(SO).0.44
+TARGET = $(OBJ)$(LP)$(MODULE)$(SO).0.0.1
 SONAME = -Wl,-soname,$(LP)$(MODULE)$(SO).0
 else
 TARGET = $(OBJ)$(LP)$(MODULE)$(SO)
@@ -56,14 +64,6 @@ endif
 ifndef CPP_BINDINGS_EMBEDDED_C_DISABLE
 _embedded_c := 1
 endif
-
-_DEP_OBJECTS = \
-	$(if $(_embedded_c),$(OBJ)eC.c$(O),) \
-	$(OBJ)eC$(O)
-
-_DEP_SOURCES = \
-	$(if $(_embedded_c),../c/eC.c,) \
-	eC.cpp
 
 _OBJECTS = $(_DEP_OBJECTS) \
 	$(if $(_embedded_c),$(OBJ)$(BINDING_NAME).c$(O),) \
@@ -79,23 +79,26 @@ LIBS += $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
 ifndef STATIC_LIBRARY_TARGET
 LIBS += \
-   $(if $(_embedded_c),,$(call _L,$(BINDING_NAME)_c)) \
-       $(call _L,$(BINDING_MODULE))
+	$(call _L,ecrt) \
+	$(call _L,ecrt_cpp) \
+   $(if $(_embedded_c),,$(call _L,$(BINDING_NAME)_c)) # $(call _L,$(BINDING_MODULE))
 endif
 
 PRJ_CFLAGS += \
-	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -DECPRFX=eC_ $(if $(_CF_DIR),-I../../$(_CF_DIR)bindings/c -I../../$(_CF_DIR)bindings/cpp,)
+	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -DECPRFX=eC_ -I.
 
-
+#(SPECIFIC_FLAGS)#
 
 PRJ_CFLAGS += \
       -I../c \
 
 ifndef STATIC_LIBRARY_TARGET
 OFLAGS += \
-	 -L../../$(_CF_DIR)obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/bin \
-	 -L../../$(_CF_DIR)obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/lib \
-    -L$(BINDMODLOC)
+	-L$(DGGAL_ABSPATH)obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/bin \
+	-L$(DGGAL_ABSPATH)obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/lib \
+	-L$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/bin \
+	-L$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/lib \
+	-L$(BINDMODLOC)
 endif
 
 # TARGETS
@@ -110,45 +113,26 @@ objdir:
 $(SYMBOLS): | objdir
 $(OBJECTS): | objdir
 $(TARGET): $(SOURCES) $(OBJECTS) | objdir
-ifndef STATIC_LIBRARY_TARGET
 	$(LD) $(OFLAGS) $(_OBJECTS) $(LIBS) -o $(TARGET) $(INSTALLNAME)
 ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
 endif
-else
-ifdef WINDOWS_HOST
-	$(AR) rcs $(TARGET) @$(OBJ)objects.lst $(LIBS)
-else
-	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
-endif
-endif
-ifdef SHARED_LIBRARY_TARGET
 ifdef LINUX_TARGET
 ifdef LINUX_HOST
 	$(if $(basename $(VER)),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)),)
 	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO),)
 endif
 endif
-endif
-	$(call cp,$(TARGET),../../$(_CF_DIR)$(HOST_SODESTDIR))
-ifdef SHARED_LIBRARY_TARGET
+	$(call cp,$(TARGET),$(DGGAL_ABSPATH)$(HOST_SODESTDIR))
 ifdef LINUX_TARGET
 ifdef LINUX_HOST
-	$(if $(basename $(VER)),ln -sf $(LP)$(MODULE)$(SO)$(VER) ../../$(_CF_DIR)$(HOST_SODESTDIR)$(LP)$(MODULE)$(SO)$(basename $(VER)),)
-	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) ../../$(_CF_DIR)$(HOST_SODESTDIR)$(LP)$(MODULE)$(SO),)
-endif
+	$(if $(basename $(VER)),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(HOST_SODESTDIR)$(LP)$(MODULE)$(SO)$(basename $(VER)),)
+	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(DGGAL_ABSPATH)$(HOST_SODESTDIR)$(LP)$(MODULE)$(SO),)
 endif
 endif
 
 # OBJECT RULES
 
-ifdef _embedded_c
-$(OBJ)eC.c$(O): ../c/eC.c
-	$(CC) $(CFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,$<) -o $(call quote_path,$@)
-endif
-
-$(OBJ)eC$(O): eC.cpp
-	$(CC) $(CFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,$<) -o $(call quote_path,$@)
 
 ifdef _embedded_c
 $(OBJ)$(BINDING_NAME).c$(O): ../c/$(BINDING_NAME).c
@@ -161,12 +145,10 @@ $(OBJ)$(BINDING_NAME)$(O): $(BINDING_NAME).cpp
 .PHONY: cleantarget
 cleantarget:
 	$(call rm,$(TARGET))
-ifdef SHARED_LIBRARY_TARGET
 ifdef LINUX_TARGET
 ifdef LINUX_HOST
 	$(call rm,$(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)))
 	$(call rm,$(OBJ)$(LP)$(MODULE)$(SO))
-endif
 endif
 endif
 
@@ -184,7 +166,7 @@ wipeclean:
 
 .PHONY: distclean
 distclean:
-	$(_MAKE) -f ../../$(_CF_DIR)Cleanfile distclean distclean_all_subdirs
+	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
 
 $(MAKEFILE_LIST): ;
 $(SOURCES): ;
