--- a/bindings_examples/cpp/Makefile.static
+++ b/bindings_examples/cpp/Makefile.static
@@ -3,7 +3,7 @@
 # CORE VARIABLES
 
 MODULE := info
-VERSION := 
+VERSION :=
 CONFIG := static
 CONTAINS_CXX := defined
 ifndef COMPILER
@@ -32,13 +32,13 @@ CONSOLE = -mconsole
 
 # INCLUDES
 
-DGGAL_ABSPATH := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))../../../
+DGGAL_ABSPATH := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))../../
 
-ifndef ECERE_SDK_SRC
-ECERE_SDK_SRC := $(DGGAL_ABSPATH)../ecere-sdk
+ifndef EC_SDK_SRC
+EC_SDK_SRC := $(DGGAL_ABSPATH)../eC
 endif
 
-_CF_DIR = $(ECERE_SDK_SRC)/
+_CF_DIR = $(EC_SDK_SRC)/
 include $(_CF_DIR)crossplatform.mk
 include $(_CF_DIR)default.cf
 ifndef WINDOWS_HOST
@@ -51,7 +51,7 @@ endif
 
 OBJ = obj/$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/
 
-RES = 
+RES =
 
 TARGET_NAME := info
 
@@ -59,22 +59,18 @@ TARGET = obj/$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/$(TARGET_NAM
 
 _OBJECTS = \
 	$(OBJ)dggal.cpp$(O) \
-	$(OBJ)eC.cpp$(O) \
-	$(OBJ)ecere.cpp$(O) \
+	$(OBJ)ecrt.cpp$(O) \
 	$(OBJ)dggal$(O) \
-	$(OBJ)eC$(O) \
-	$(OBJ)ecere$(O) \
+	$(OBJ)ecrt$(O) \
 	$(OBJ)info$(O)
 
 OBJECTS = $(_OBJECTS)
 
 SOURCES = \
 	../../bindings/cpp/dggal.cpp \
-	../../bindings/cpp/eC.cpp \
-	../../bindings/cpp/ecere.cpp \
+	../../bindings/cpp/ecrt.cpp \
 	../../bindings/c/dggal.c \
-	../../bindings/c/eC.c \
-	../../bindings/c/ecere.c \
+	../../bindings/c/ecrt.c \
 	info.cpp
 
 RESOURCES =
@@ -89,12 +85,12 @@ LIBS += $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 
 ifndef STATIC_LIBRARY_TARGET
 LIBS += \
-	$(call _L,ecereVanilla)
+	$(call _L,ecrtStatic)
 endif
 
 PRJ_CFLAGS += \
 	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -Wall -DREPOSITORY_VERSION="\"$(REPOSITORY_VER)\"" \
-			 -DECERE_STATIC \
+			 -DEC_STATIC \
 			 -I../../bindings/c \
 			 -I../../bindings/cpp
 
@@ -110,11 +106,9 @@ ifdef WINDOWS_TARGET
 ifndef STATIC_LIBRARY_TARGET
 LIBS += \
 	$(call _L,kernel32) \
-	$(call _L,gdi32) \
 	$(call _L,user32) \
 	$(call _L,winmm) \
 	$(call _L,mpr) \
-	$(call _L,imm32) \
 	$(call _L,z) \
 	$(call _L,dggalStatic)
 endif
@@ -122,29 +116,25 @@ endif
 else
 ifdef LINUX_TARGET
 
-ifndef STATIC_LIBRARY_TARGET
 LIBS += \
 	$(call _L,dggalStatic) \
-	$(call _L,X11) \
-	$(call _L,Xext) \
-	$(call _L,Xrender) \
 	$(call _L,m) \
 	$(call _L,dl) \
 	$(call _L,pthread) \
-	$(call _L,curses) \
 	$(call _L,z)
-endif
 
 endif
 endif
 
 CECFLAGS += -cpp $(_CPP)
 
-ifndef STATIC_LIBRARY_TARGET
 OFLAGS += \
-	 -L$(call quote_path,../../obj/static.$(PLATFORM)$(COMPILER_CONFIG)) \
-	 -L$(call quote_path,../../obj/release.$(PLATFORM)$(COMPILER_CONFIG))
-endif
+	-L$(call quote_path,../../obj/static.$(PLATFORM)$(COMPILER_CONFIG)) \
+	-L$(call quote_path,../../obj/release.$(PLATFORM)$(COMPILER_CONFIG)) \
+	-L$(call quote_path,$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_CONFIG)/lib) \
+	-L$(call quote_path,$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_CONFIG)/bin)
+
+CXXFLAGS += -std=c++17
 
 # TARGETS
 
@@ -159,25 +149,9 @@ $(TARGET): $(SOURCES) $(RESOURCES_EAR) $(SYMBOLS) $(OBJECTS) | objdir
 	@$(call rm,$(OBJ)objects.lst)
 	@$(call touch,$(OBJ)objects.lst)
 	$(call addtolistfile,$(_OBJECTS),$(OBJ)objects.lst)
-ifndef STATIC_LIBRARY_TARGET
 	$(LD) $(OFLAGS) @$(OBJ)objects.lst $(LIBS) -o $(TARGET) $(INSTALLNAME) $(SONAME)
 ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
-endif
-else
-ifdef WINDOWS_HOST
-	$(AR) rcs $(TARGET) @$(OBJ)objects.lst $(LIBS)
-else
-	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
-endif
-endif
-ifdef SHARED_LIBRARY_TARGET
-ifdef LINUX_TARGET
-ifdef LINUX_HOST
-	$(if $(basename $(VER)),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)),)
-	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO),)
-endif
-endif
 endif
 
 # SYMBOL RULES
@@ -189,20 +163,14 @@ endif
 $(OBJ)dggal.cpp$(O): ../../bindings/cpp/dggal.cpp
 	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/cpp/dggal.cpp) -o $(call quote_path,$@)
 
-$(OBJ)eC.cpp$(O): ../../bindings/cpp/eC.cpp
-	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/cpp/eC.cpp) -o $(call quote_path,$@)
-
-$(OBJ)ecere.cpp$(O): ../../bindings/cpp/ecere.cpp
-	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/cpp/ecere.cpp) -o $(call quote_path,$@)
+$(OBJ)ecrt.cpp$(O): ../../bindings/cpp/ecrt.cpp
+	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/cpp/ecrt.cpp) -o $(call quote_path,$@)
 
 $(OBJ)dggal$(O): ../../bindings/c/dggal.c
 	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/dggal.c) -o $(call quote_path,$@)
 
-$(OBJ)eC$(O): ../../bindings/c/eC.c
-	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/eC.c) -o $(call quote_path,$@)
-
-$(OBJ)ecere$(O): ../../bindings/c/ecere.c
-	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/ecere.c) -o $(call quote_path,$@)
+$(OBJ)ecrt$(O): ../../bindings/c/ecrt.c
+	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/ecrt.c) -o $(call quote_path,$@)
 
 $(OBJ)info$(O): info.cpp
 	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,info.cpp) -o $(call quote_path,$@)
@@ -210,14 +178,6 @@ $(OBJ)info$(O): info.cpp
 cleantarget:
 	$(call rm,$(OBJ)objects.lst)
 	$(call rm,$(TARGET))
-ifdef SHARED_LIBRARY_TARGET
-ifdef LINUX_TARGET
-ifdef LINUX_HOST
-	$(call rm,$(OBJ)$(LP)$(MODULE)$(SO)$(basename $(VER)))
-	$(call rm,$(OBJ)$(LP)$(MODULE)$(SO))
-endif
-endif
-endif
 
 clean: cleantarget
 	$(call rm,$(_OBJECTS))
