rust bindings: Splitting into ecrt-sys, dggal-sys, and dggal - Also switching to link with static libraries for ecrt and dggal - Importing the dggal create with 'extern crate dggal' will still need all of the libraries to be found at the time of linking the sample.
Some libraries currently get copied to {DGGAL}/obj/{PLATFORM}/lib:

   libdggal.rlib.
   libdggalc_Static.a
   libdggal_sys.rlib
   libecrt_sys.rlib
   libecrtc_Static.a

while libdggalStatic.a is found in {DGGAL}/obj/static.{PLATFORM},
and   libecrtStatic.a is found in {eCSDK}/obj/{PLATFORM}/lib.

--- a/bindings/rust/Makefile
+++ b/bindings/rust/Makefile
@@ -1,20 +1,4 @@
-ifneq ($(V),1)
-.SILENT:
-endif
-
-MODULE := dggal
-
-# CORE VARIABLES
-
-VERSION := 0.0.1
-CONFIG := release
-ifndef COMPILER
-COMPILER := default
-endif
-
-TARGET_TYPE = sharedlib
-
-# INCLUDES
+.PHONY: all clean realclean distclean ecrt-sys dggal-sys dggal
 
 DGGAL_ABSPATH := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))../../
 
@@ -24,58 +8,31 @@ endif
 
 _CF_DIR = $(EC_SDK_SRC)/
 include $(_CF_DIR)crossplatform.mk
-include $(_CF_DIR)default.cf
-
-# POST-INCLUDES VARIABLES
-
-OBJ = obj/$(PLATFORM)$(COMPILER_SUFFIX)
-
-TARGET = $(OBJ)/lib$(MODULE).rlib
-
-SOURCES = $(MODULE).rs
-
-ifndef STATIC_LIBRARY_TARGET
-LIBS += \
-	$(call _L,$(MODULE))_c \
-	$(call _L,ecrt_c) \
-	$(call _L,ecrt)
-endif
-
-OFLAGS =
-
-ifndef STATIC_LIBRARY_TARGET
-OFLAGS += \
-	 -Lnative=$(DGGAL_ABSPATH)obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/lib \
-	 -Lnative=$(DGGAL_ABSPATH)obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/bin
-endif
 
 # TARGETS
 
-.PHONY: all
-all: objdir $(TARGET);
+all: ecrt-sys dggal-sys dggal
 
-.PHONY: objdir
-objdir:
-	$(call mkdir,$(OBJ))
+ecrt-sys:
+	+$(_MAKE) -f Makefile.ecrt-sys
 
-$(SYMBOLS): | objdir
-$(OBJECTS): | objdir
-$(TARGET): $(SOURCES) $(OBJECTS) | objdir
-	rustc --edition 2021 --crate-type=lib $(OFLAGS) $(SOURCES) $(LIBS) -o $(TARGET)
-	$(call mkdir,-p $(DGGAL_ABSPATH)$(HOST_SODESTDIR))
-	$(call cp,$(TARGET),$(DGGAL_ABSPATH)$(HOST_SODESTDIR))
+dggal-sys: ecrt-sys
+	+$(_MAKE) -f Makefile.dggal-sys
 
-.PHONY: cleantarget
-cleantarget:
-	$(call rm,$(TARGET))
+dggal: dggal-sys
+	+$(_MAKE) -f Makefile.dggal
 
-.PHONY: clean
-clean: cleantarget
+clean:
+	+$(_MAKE) -f Makefile.ecrt-sys clean
+	+$(_MAKE) -f Makefile.dggal-sys clean
+	+$(_MAKE) -f Makefile.dggal clean
+	
+realclean:
+	+$(_MAKE) -f Makefile.ecrt-sys realclean
+	+$(_MAKE) -f Makefile.dggal-sys realclean
+	+$(_MAKE) -f Makefile.dggal realclean
 
-.PHONY: realclean
-realclean: cleantarget
-	$(call rmr,$(OBJ))
-
-.PHONY: distclean
 distclean:
-	$(_MAKE) -f $(_CF_DIR)Cleanfile distclean distclean_all_subdirs
+	+$(_MAKE) -f Makefile.ecrt-sys distclean
+	+$(_MAKE) -f Makefile.dggal-sys distclean
+	+$(_MAKE) -f Makefile.dggal distclean
