Makefiles: Copy main library to obj/$(PLATFORM)/lib - Also removed -p argument to mkdir which does cause errors - Review whether this still works on Windows without it - crossplatform.mk does not have -p for ifdef WIN_SHELL_COMMANDS, but has it for Linux

--- a/bindings/c/Makefile.dggal_c
+++ b/bindings/c/Makefile.dggal_c
@@ -108,7 +108,7 @@ ifdef LINUX_HOST
 	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO),)
 endif
 endif
-	$(call mkdir,-p $(DGGAL_ABSPATH)$(HOST_SODESTDIR))
+	$(call mkdir,$(DGGAL_ABSPATH)$(HOST_SODESTDIR))
 	$(call cp,$(TARGET),$(DGGAL_ABSPATH)$(HOST_SODESTDIR))
 ifdef LINUX_TARGET
 ifdef LINUX_HOST
