Makefiles: Copy main library to obj/$(PLATFORM)/lib - Also removed -p argument to mkdir which does cause errors - Review whether this still works on Windows without it - crossplatform.mk does not have -p for ifdef WIN_SHELL_COMMANDS, but has it for Linux

--- a/Makefile.dggal
+++ b/Makefile.dggal
@@ -181,6 +181,8 @@ ifdef LINUX_HOST
 	$(if $(VER),ln -sf $(LP)$(MODULE)$(SO)$(VER) $(OBJ)$(LP)$(MODULE)$(SO),)
 endif
 endif
+	$(call mkdir,$(DGGAL_ABSPATH)$(HOST_SODESTDIR))
+	$(call cp,$(TARGET),$(DGGAL_ABSPATH)$(HOST_SODESTDIR))
 
 # SYMBOL RULES
 
