bindings/rust: Fixes for compactZones() - Also adding list.rs example using listZones() and compactZones() - Added eC runtime tokenizeWith() method   (in dggal.rs for now -- will eventually move to new ecrt.rs) - Fixed Makefile.ecrt-sys to not set up ECPRFX, which caused mismatches with definitions in ecrt_cffi.rs

--- a/bindings/rust/Makefile.ecrt-sys
+++ b/bindings/rust/Makefile.ecrt-sys
@@ -15,7 +15,7 @@ ifndef COMPILER
 COMPILER := default
 endif
 
-C_BINDINGS_SYMBOLS_PREFIX_ENABLE := y
+# C_BINDINGS_SYMBOLS_PREFIX_ENABLE := y
 
 TARGET_TYPE = sharedlib
 
