bindings/rust: Rust implementation of togeo command - New classes to access the internal structure of the DGGSJSON object returned by readDGGSJSON() - New ecrt crate with some initial bindings for the eC runtime library - API change: DGGAL::newDGGRS changed to more idiomatic DGGRS::new() taking &DGGAL as an argument - API change: dggal::Application -> ecrt::Application - API change: dggal::Pointd and dggal::tokenizeWith() -> ecrt:: - API change: readDGGSJSON() now taking an ecrt::File and returning a DGGAL::DGGSJSON object

--- a/bindings/rust/Makefile.dggal-sys
+++ b/bindings/rust/Makefile.dggal-sys
@@ -15,7 +15,7 @@ ifndef COMPILER
 COMPILER := default
 endif
 
-C_BINDINGS_SYMBOLS_PREFIX_ENABLE := y
+# C_BINDINGS_SYMBOLS_PREFIX_ENABLE := y
 
 TARGET_TYPE = sharedlib
 
@@ -50,7 +50,7 @@ OFLAGS =
 OFLAGS += \
 	-L obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX) \
 	-Lnative=obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX) \
-	-Lnative=$(DGGAL_ABSPATH)obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/lib \
+	-Lnative=$(DGGAL_ABSPATH)obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/lib
 
 PRJ_CFLAGS += $(if $(DEBUG), -g, -O2 -ffast-math) -w -I$(DGGAL_ABSPATH)bindings/c -DEC_STATIC
 
@@ -95,7 +95,7 @@ cleantarget:
 
 clean: cleantarget
 	$(call rm,_OBJECTS)
-	$(call rm,$(OBJ)/$(BINDING_NAME)_cStatic.a)
+	$(call rm,$(OBJ)/lib$(BINDING_NAME)_cStatic.a)
 
 realclean: cleantarget
 	$(call rmr,$(OBJ))
